<resources>
    <string name="app_name">PlaBear</string>
    <string name="app_intro">플라베어는 플라스틱과 폴라베어의 합성어로\n환경을 지키고자 만든 앱입니다.</string>
    <string name="login_explain">구글로 쉽게 로그인하세요</string>
    <string name="title_common">PlaBear</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="menu0">메인화면</string>
    <string name="menu1">쓰레기줄어들지도</string>
    <string name="menu2">쿠폰</string>
    <string name="menu3">챌린지</string>
    <string name="menu4">퀴즈</string>
    <string name="menu5">정보 공유 게시판</string>
    <string name="menu6">그래프</string>
    <string name="menu7">로그아웃</string>
    <string name="ranking">순위</string>
    <string name="discount">%s 원 할인</string>
    <string name="api_base">http://158.247.201.96:1337/</string>
    <string name="graph_api_base">https://www.recycling-info.or.kr/</string>
    <string name="affected_rows">affectedRows</string>
    <string name="warning">경고!</string>
    <string name="won">%s 원</string>
    <string name="store">저장</string>
    <string name="notice">알림</string>
    <string name="delete_ask_msg">정말 삭제하시겠습니까?</string>
    <string name="delete_ok_msg">유효기간 만료 / 유저 요청에 의해 삭제되었습니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="success">성공!</string>
    <string name="register_success_message">등록되었습니다.</string>
    <string name="coupon">할인 쿠폰</string>
    <string name="coupon_detail_string">쿠폰 상세정보</string>
    <string name="coupon_edate">유효기간</string>
    <string name="coupon_warning">※ 쿠폰은 1회만 사용 가능합니다.</string>
    <string name="coupon_uname">회원명</string>
    <string name="coupon_price">금액</string>
    <string name="coupon_cdate">발급일</string>
    <string name="coupon_delete">쿠폰 삭제</string>
    <string name="coupon_register">쿠폰 등록</string>
    <string name="coupon_id">쿠폰 번호</string>
    <string name="coupon_button">등록</string>
    <string name="coupon_register_fail">쿠폰 등록에 실패하였습니다!</string>
    <string name="coupon_register_success">쿠폰이 성공적으로 등록되었습니다!</string>
    <string name="firebase_storage">gs://plabear.appspot.com</string>
    <string name="review_camera">촬영</string>
    <string name="review_gallery">갤러리</string>
    <string name="review_submit">등록</string>
    <string name="review_pic_select">사진 선택</string>
    <string name="review_database">review</string>
    <string name="review_max_exceed">업로드 가능한 최대 이미지 개수를 초과하였습니다.</string>
    <string name="map">일회용 플라스틱을 소비하지 않을 권리,\n플라베어가 지켜드립니다.</string>
    <string name="infoshare_database">infoshare</string>
    <string name="challenge_action_database">challenge/action</string>
    <string name="challenge_submit_database">challenge/submit</string>
    <string name="challenge_create_database">challenge/hold</string>
    <string name="graph_pid">NTN003</string>
    <string name="graph_userid">dmbs335</string>
    <string name="graph_key">"ZO0DNOG2UTSO2VZVISNMCFQ3ZNV81S24U3VY3KLWF4P5U"</string>
    <string name="homepage">홈페이지</string>
    <string name="review_detail">리뷰보기</string>
    <string name="review_write">리뷰작성</string>
    <string name="call">전화걸기</string>
    <string name="list_challenge">챌린지 목록</string>
    <string name="image_todo">TODO</string>
    <string name="challenge_sir">%s 님의 챌린지</string>
    <string name="challenge_hint">챌린지를 사진과 함께 인증하세요. 사진을 허위로 올린 것이 적발될 경우 제재받을 수 있습니다.</string>
    <string name="challenge_making">챌린지 만들기</string>
    <string name="challenge_explain">새로운 챌린지를 만들어서 공유하세요</string>
    <string name="challenge_making_hint">일정 수 이상의 좋아요를 받으면 정식 챌린지로 등록됩니다.</string>
    <string name="graph_region_title">지역별 플라스틱 배출량</string>
    <string name="left_row">\u003c</string>
    <string name="right_row">\u003e</string>
    <string name="year_2018">2018</string>
    <string name="info_writing_hint">나만의 플라스틱 줄이기 사례 및 방법을 공유해 주세요.</string>
    <string name="quiz_point">80점 이상이면 1 포인트를 획득할 수 있습니다!</string>
    <string name="quiz_select">퀴즈 주제를 선택하세요.</string>
    <string name="level_select">Level을 선택하세요.</string>
    <string name="question_count">question_count</string>
    <string name="question">Question</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="sec">sec</string>
    <string name="score">SCORE</string>
    <string name="more_quiz">다른 퀴즈도 도전 !</string>
    <string name="back">메인 화면으로 돌아가기</string>
    <string name="star_point">별점</string>
    <string name="nickname">닉네임</string>
    <string name="sir">%s 님의 리뷰</string>
    <string name="review_write_hint">내용을 입력하세요.</string>
    <plurals name="qrcode_point">
        <item quantity="one">%d Point 지급</item>
        <item quantity="other">%d Points 지급</item>
    </plurals>
    <string name="qrcode_scan_done">QR코드 스캔 완료!</string>
    <string name="qrcode_scan_fail">QR코드 스캔 실패!</string>
    <string name="qrcode_description">환경 보호를 실천하는 매장,\n%s를 이용해주셔서 감사합니다.</string>
    <string name="qrcode_delimiter">\u005C\u007C</string>
    <string name="count">개수</string>
    <string name="R.string.emissions">일일 배출량\n%s ton/day</string>
    <string name="desc_info_update_btn">글 수정 버튼</string>
    <string name="desc_info_delete_btn">삭제 버튼</string>
    <string name="desc_board_image">메인 이미지</string>
    <string name="challenge_waiting">등록 대기 중인 챌린지 보기 버튼</string>
    <string name="qrcode_header_text">일회용 플라스틱을 소비하지 않을 권리,\n플라베어가 지켜드립니다.</string>
    <string name="text_not_exist">글이 존재하지 않습니다</string>
    <string name="coupon_barcode_img">바코드 이미지</string>
    <string name="challenge_image_button">챌린지 이미지 버튼</string>
    <string name="challenge_create">챌린지 생성 버튼</string>
    <string name="map_qrcode">QR 코드 버튼</string>
    <string name="map_current_location">현재 위치 버튼</string>
    <string name="challenge_item_button">챌린지 관련 버튼</string>
    <string name="result_image">결과 이미지</string>
    <string name="write_board_button">글쓰기 버튼</string>
    <string name="board_sir">%s 님의 게시글</string>
    <string name="rank_image">랭킹 이미지</string>
    <string name="bear_image">곰 그림</string>
    <string name="map_homepage">홈페이지</string>
    <string name="map_review_list">리뷰보기</string>
    <string name="map_write_review">리뷰작성</string>
    <string name="map_phonecall">전화걸기</string>
    <string name="review_image_one">1번 이미지</string>
    <string name="review_image_two">2번 이미지</string>
    <string name="review_image_three">3번 이미지</string>
</resources>