<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graph_region_title"
        android:id="@+id/graph_title"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="6dp">
        <Button
            android:id="@+id/graph_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_row"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:background="@android:color/transparent" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/graph_year"
            android:text="@string/year_2018"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="32sp"
            android:background="@android:color/transparent" />
        <Button
            android:id="@+id/graph_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_row"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <com.pla_bear.graph.NoSwipeViewPager
        android:id="@+id/graph_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/graph_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>