<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coupon_detail_string"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coupon"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        />
    <ImageView
        android:id="@+id/coupon_barcode_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/coupon_barcode_img"
        />
    <TextView
        android:id="@+id/coupon_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/coupon_warning"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="18dp"
        android:layout_gravity="end"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginEnd="12dp"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <com.pla_bear.base.Divider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorHr"/>
        <TableRow
            android:paddingTop="14dp"
            android:paddingBottom="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_edate"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/coupon_edate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorHr"/>
        <TableRow
            android:paddingTop="14dp"
            android:paddingBottom="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_uname"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/coupon_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                />
        </TableRow>
        <com.pla_bear.base.Divider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorHr"/>
        <TableRow
            android:paddingTop="14dp"
            android:paddingBottom="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_price"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/coupon_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                />
        </TableRow>
        <com.pla_bear.base.Divider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorHr"/>
        <TableRow
            android:paddingTop="14dp"
            android:paddingBottom="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_cdate"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/coupon_cdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                android:textColor="@color/colorPrimaryDark"
                />
        </TableRow>
        <com.pla_bear.base.Divider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorHr"/>
        <Button
            android:id="@+id/coupon_delete_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#DC143C"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:text="@string/coupon_delete"
            />
    </TableLayout>
</LinearLayout>