<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">
        <TextView
            android:id="@+id/review_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="6dp" />
        <RatingBar
            android:id="@+id/review_item_ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"
            android:isIndicator="true"
            />
        <TextView
            android:id="@+id/review_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp" />
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/review_item_image_wrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="200dp"
                    android:contentDescription="@string/review_image_one" />
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:maxHeight="200dp"
                    android:contentDescription="@string/review_image_two" />
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:maxHeight="200dp"
                    android:contentDescription="@string/review_image_three" />
            </LinearLayout>
        </HorizontalScrollView>
</LinearLayout>