<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="5dp"
        app:cardCornerRadius="25dp">



        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ranking"
                android:textColor="#000"
                android:text="@string/ranking"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:textSize="20sp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/item_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:text="@string/nickname"
                android:textColor="#000"
                android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="end"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_imageView"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/item_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/count"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>